src/main/kotlin/com/example/kweb/error/model/ErrorName.kt
package com.example.kweb.error.model

object ErrorName {
    const val INVALID_ARGUMENT = "Invalid Argument"
    const val NOT_FOUND = "Not Found"

    const val INTERNAL_SERVER_ERROR = "Internal Server Error"
}
